@@ -1,7 +1,7 @@
 /*
  * The Apache Software License, Version 1.1
  *
- * Copyright (c) 2000-2001 The Apache Software Foundation.  All rights
+ * Copyright (c) 2000-2002 The Apache Software Foundation.  All rights
  * reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -151,6 +151,7 @@ public class DirectoryScanner implements FileScanner {
         "**/#*#",
         "**/.#*",
         "**/%*%",
+        "**/._*",
         "**/CVS",
         "**/CVS/**",
         "**/.cvsignore",
