@@ -28,6 +28,10 @@ Changes that could break older environments:
   a check is made to see if there is another overloaded method that takes in
   some other type of argument.  If there is one such method, then the method 
   that takes in String as an argument is not selected by the Introspector.
+  
+* The pattern definition **/._* has been included into the Default 
+  Excludes list.
+
 
 Fixed bugs:
 -----------
